[package]
name = "farbe"
version = "0.1.0"
description = "A Vim/Neovim colorscheme creation tool."
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/farbe"
keywords = ["vim", "neovim", "colorscheme"]
categories = ["command-line-utilities", "text-editor"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
