[package]
name = "barbel"
version = "0.1.0"
description = "A document generator framework"
authors = ["watcol <potfman@gmail.com>"]
repository = "https://github.com/watcol/barbel"
keywords = ["template-engine", "toml", "generator", "static-site-generator"]
categories = ["command-line-utilities", "config"]
license = "MIT"
readme = "README.md"
edition = "2018"

include = [
  "README.md",
  "Cargo.toml",
  "src/**/*.rs",
]

[dependencies]
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
toml = "0.4"
# handlebars = "4.1.3"
# rust-embed = "6.2"
# anyhow = "1.0"
# fmtlog = "0.1"
